// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Button disabled while loading 1`] = `
<button
  className="fs-btn fs-btn--before"
  disabled={true}
>
  <Icon
    name="refresh"
    size="s"
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button returns null 1`] = `
<button
  className="fs-btn"
>
  <Icon
    size="s"
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button with only icon in size xl 1`] = `
<button
  className="fs-btn"
>
  <Icon
    name="refresh"
    size="xl"
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button with spinning icon while loading 1`] = `
<button
  className="fs-btn fs-btn--after"
  disabled={true}
>
  <Icon
    name="refresh"
    size="s"
    spin={true}
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button with text left and icon right 1`] = `
<button
  className="fs-btn fs-btn--after"
>
  <Icon
    name="refresh"
    size="s"
  />
  <span>
    Some text
  </span>
</button>
`;

exports[`<Button> Button with text right and icon left 1`] = `
<button
  className="fs-btn fs-btn--before"
>
  <Icon
    name="refresh"
    size="s"
  />
  <span>
    Some text
  </span>
</button>
`;
